# pyarm

./: .gitignore  CLAUDE.md  README.md  README_ELEMENT_LINKING.md  README_PLUGIN_KONFIGURATION.md  README_PLUGIN_SYSTEM.md  SETUP.md  create_client_plugin.py  import_client.md  import_client_a.py  import_client_b.py  import_client_c.py  import_fdk_fuer_was.py  import_sbb_dfa.py  main.py  process_visualizer.md  process_visualizer.py  pyproject.toml  pyrightconfig.json  replace_umlaut.py  setup.py  test_client_a_plugin.py  test_fdk_conversion.py
clients/clientA/: test_client_a_plugin.py
clients/clientA/code/: converter.py  reader.py
clients/clientA/plugins/: README.md
clients/clientA/project1/: curved_track.csv  drainage.csv  foundation.json  mast.json  track.csv
clients/clientC/: foundation_converted.json
clients/dfa/: import_dfa.py  test_dfa_plugin.py
code/processes/: PROCESS_IMPLEMENTATION.md  README_calculation.md  README_visualization.md  process1_visualization.py  process2_calculation.py  process3_fdk_import.py
code/repository/: REPOSITORY_PATTERN.md  json_repository.py
code/services/: SERVICE_LAYER.md  calculation_service.py  visualization_service.py
code/tests/: TESTING_STRATEGY.md  test_base_models.py  test_calculation_service.py  test_element_models.py  test_enums.py  test_factory.py  test_json_repository.py  test_type_guards.py  test_visualization_process.py  test_visualization_service.py
config/: client_a_element_links.json  default_client_config.json  plugins.json
config/validation/: track_schema.json
docs/: architecture.md  component_system.md  element_linking.md  plugin_configuration.md  plugin_system.md  repository_system.md  service_layer.md  setup.md  validation_system.md
docs/decisions/: README.md  component_pattern.md  element_linking_strategy.md  roadmap_metadaten_validierung.md  unit_conversion_system.md
docs/refactor_mpi/: claude-mpi-refa_plugin.md
examples/: create_client_plugin.py  metadata_example.py  test_plugin.py
examples/config/: default_client_config.yaml  plugins.json
examples/plugins/: client_plugin_linker.py  import_client_c.py  test_client_c_plugin.py
examples/processes/: CANONICAL_MODEL.md
plugins/: import_sbb_dfa.py  test_sql_conversion.py
plugins/client_a/: __init__.py
plugins/client_c/: __init__.py  simplified.py
plugins/dfa_plugin/: __init__.py  reader.py
plugins/sbb_plugin/: IMPROVEMENT_PLAN.md  README.md  __init__.py  fixed_plugin.py  reader.py
schemas/validation/: foundation_schema.json
specs/: chat-claude.md  compact_chat.md
specs/refactor_mpi/: refa.md  refa_claude.md
src/pyarm/: app.py
tests/common/: test_building_phase_component.py  test_metadata_repository.py  test_parameter_component_integration.py  test_unit_conversion.py  test_validation_basics.py  test_validation_integration.py
(+150 files in other folders)
