
[project]
name = "pyarm"
version = "0.1.0"
description = "Python Architecture Restructuring Model - Component System Framework"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "elyo", email = "erichraschle@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/pyarm"
"Bug Tracker" = "https://github.com/yourusername/pyarm/issues"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "isort>=5.10.0",
    "ruff>=0.0.244",
    "pyright>=1.1.400",
]

# Plugin Konfiguration
[tool.pyarm.plugins]
auto_discovery = true
plugin_paths = ["plugins", "client_plugins"]

# Ruff Konfiguration
[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "B", "I"]

# Isort Konfiguration
[tool.isort]
profile = "black"
line_length = 100

# Pytest Konfiguration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
